<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/menu_settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_stream_on_wifi"
                android:checkable="true"
                android:title="@string/action_wifi_only" />

            <item
                android:id="@+id/menu_email"
                android:title="@string/action_email_dev" />

            <item
                android:id="@+id/menu_about"
                android:title="@string/action_about" />
        </menu>
    </item>

</menu>