<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_content_description"
        android:scaleType="centerCrop"
        tools:background="@drawable/nature_background" />

    <LinearLayout
        android:id="@+id/mainUI"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <RelativeLayout
            android:id="@+id/streamInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                tools:text="It's raining.." />

            <TextView
                android:id="@+id/descText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleText"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-thin"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:text="Better stay inside!" />

            <TextView
                android:id="@+id/sleepTimerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/descText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-thin"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="00:48" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/sleepTimerBtn"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/sleep_timer_button_content"
            android:gravity="center"
            android:src="@drawable/ic_access_time_24dp" />

        <RelativeLayout
            android:id="@+id/musicControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/prevBtn"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_toLeftOf="@+id/playPauseLayout"
                android:layout_toStartOf="@+id/playPauseLayout"
                android:contentDescription="@string/previous_button_content_desc"
                android:padding="4dp"
                android:src="@drawable/ic_skip_previous_48dp" />

            <FrameLayout
                android:id="@+id/playPauseLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <ProgressBar
                    android:id="@+id/loadingStream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:visibility="invisible" />

                <ImageButton
                    android:id="@+id/playBtn"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/play_button_content_desc"
                    android:padding="4dp"
                    android:src="@drawable/ic_play_arrow_48dp"
                    android:visibility="visible" />

            </FrameLayout>

            <ImageButton
                android:id="@+id/nextBtn"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_toEndOf="@+id/playPauseLayout"
                android:layout_toRightOf="@+id/playPauseLayout"
                android:contentDescription="@string/next_button_content_desc"
                android:padding="4dp"
                android:src="@drawable/ic_skip_next_48dp" />

        </RelativeLayout>

        <Button
            android:id="@+id/showSoundsBtn"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="48dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/all_sounds_button"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:visibility="gone" />

</merge>

